# mk48-ifc

./: .gitmodules  README.md  rust-toolchain.toml
client/src/: background.rs
common/: Cargo.toml
common/src/: guidance.rs  lib.rs  protocol.rs  terrain.rs  velocity.rs
common/src/entity/: _type.rs
engine/client_util/src/: context.rs  lib.rs
engine/common_util/: Cargo.toml
engine/common_util/src/: angle.rs  lib.rs
engine/engine_macros/src/: layer.rs  smol_routable.rs
engine/game_server/: Cargo.toml
engine/game_server/src/: chat.rs  lib.rs  player.rs
engine/renderer2d/src/: lib.rs  particle.rs
engine/renderer3d/src/: lib.rs
engine/yew_frontend/src/: lib.rs
macros/src/: entity_type.rs
server/: Cargo.toml
server/src/: protocol.rs  server.rs  world_inbound.rs
