[package]
name = "common_util"
workspace = ".."
version = "0.1.0"
edition = "2018"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[lib]
name = "common_util"
path = "src/lib.rs"

[features]
rand = [ "dep:rand" ]

[dependencies]
core_protocol = { path = "../core_protocol" }
glam = { version = "0.18", features = [ "debug-glam-assert" ] }
rand = { version = "0.8", optional = true }
serde = "1.0"
fxhash = "0.2"

#Carapce: Added imports
secret_macros = {path = "../../info-flow-library/ifc_library/macros", package="secret_macros"}
secret_structs = {path = "../../info-flow-library/ifc_library/secret_structs", package="secret_structs"}

[dev-dependencies]
serde_json = "1.0"
engine_macros = { path = "../engine_macros" }
rand = "0.8"